fix: error running the app

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=coffee-cloud
 spring.datasource.generate-unique-name=false
 spring.datasource.name=coffeecloud
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
